---
source: compiler-core/src/javascript/tests/lists.rs
expression: "\npub fn go() {\n  [] == [1]\n  [] != [1]\n}\n"
---
----- SOURCE CODE

pub fn go() {
  [] == [1]
  [] != [1]
}


----- COMPILED JAVASCRIPT
import {
  Empty as $Empty,
  List$Empty$const as $List$Empty$const,
  prepend as listPrepend,
} from "../gleam.mjs";

export function go() {
  listPrepend(1, $List$Empty$const) instanceof $Empty;
  return !(listPrepend(1, $List$Empty$const) instanceof $Empty);
}
